--- a/templates/portfolio/delete_member.html.twig
+++ b/templates/portfolio/delete_member.html.twig
@@ -12,11 +12,11 @@
 
 	<body>
 		{% include "header.html.twig" %}
-		<div id="delete-member-wrapper">
+		<div id="form-wrapper">
 			<div class="container">
-				<p class="title">
+				<h2 class="title">
 					退会
-				</p>
+				</h2>
 
 				<form action="delete_confirm.php" method="post">
 					<div class="form-list">
