--- a/templates/portfolio/member_info.html.twig
+++ b/templates/portfolio/member_info.html.twig
@@ -57,8 +57,10 @@
 					<p class="meminfo-title">パスワード</p>
 					<p class="mem-info">********</p>
 				</div>
-				<p class="settings-url">
+				<p class="url">
 					<a href="{{constant('portfolio\\Bootstrap::ENTRY_URL')}}settings.php">登録情報の変更</a>
+				<p class="url">
+					<a href="{{constant('portfolio\\Bootstrap::ENTRY_URL')}}delete_member.php">退会する</a>
 				</p>
 			</div>
 		</div>
