--- a/portfolio/css/_common.scss
+++ b/portfolio/css/_common.scss
@@ -14,3 +14,40 @@ body {
 li {
   list-style: none;
 }
+
+ul {
+  padding-inline-start: 0;
+}
+
+a{
+  text-decoration: none;
+  color: #000;
+}
+
+p{
+  margin:0;
+}
+
+.Required {
+  width: 40px;
+  display: inline-block;
+  background-color: red;
+  color: #fff;
+  font-size: 12px;
+  padding: 6px;
+  margin-right: 8px;
+  text-align: center;
+  border-radius: 5px;
+}
+
+.option {
+  width: 40px;
+  display: inline-block;
+  background-color: #5bc8ac;
+  color: #fff;
+  font-size: 12px;
+  padding: 6px;
+  margin-right: 8px;
+  text-align: center;
+  border-radius: 5px;
+}
