--- a/templates/portfolio/regist.html.twig
+++ b/templates/portfolio/regist.html.twig
@@ -52,8 +52,8 @@
 							</p>
 							<div class="block auto-size">
 								{% for index, label in sexArr %}
-									<input type="radio" name="sex" value="{{index}}" id="sex_{{index}}" {% if dataArr.sex == index %} checked="checked" {% endif %} class="sex">
-									<label for="sex_{{index}}" class="sex">{{label}}</label>
+									<input type="radio" name="sex" value="{{index}}" id="sex_{{index}}" {% if dataArr.sex == index %} checked="checked" {% endif %} class="radio">
+									<label for="sex_{{index}}" class="radio">{{label}}</label>
 								{% endfor %}
 							</div>
 						</div>
